--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "happypack": "^2.2.1",
     "history": "^2.1.2",
     "http-proxy": "^1.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "mobile-detect": "^1.3.3",
     "postcss-loader": "^0.11.1",
