--- a/package.json
+++ b/package.json
@@ -26,55 +26,57 @@
   "scripts": {},
   "dependencies": {
     "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-latest": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.14.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.0",
     "babel-runtime": "^6.11.6",
-    "clean-webpack-plugin": "^0.1.10",
+    "clean-webpack-plugin": "^0.1.16",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
-    "css-loader": "^0.25.0",
-    "deepmerge": "^0.2.10",
+    "css-loader": "^0.28.0",
+    "deepmerge": "^1.3.2",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "find-cache-dir": "^0.1.1",
-    "happypack": "^2.2.1",
-    "http-proxy": "^1.14.0",
+    "http-proxy": "^1.16.2",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
-    "mobile-detect": "^1.3.3",
-    "postcss-loader": "^0.11.1",
+    "mobile-detect": "^1.3.5",
+    "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.1",
+    "sass-loader": "^6.0.3",
     "serialize-javascript": "^1.3.0",
-    "serve-favicon": "^2.3.0",
+    "serve-favicon": "^2.4.2",
     "strip-loader": "^0.1.2",
-    "style-loader": "^0.13.1",
-    "superagent": "^2.2.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-isomorphic-tools": "^2.5.8"
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.2",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-isomorphic-tools": "^3.0.2"
   },
   "devDependencies": {},
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react": "15.3.1",
+    "react-dom": "15.3.1"
+  },
   "engines": {
     "node": ">=4"
   }
