--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "postcss-loader": "^1.3.3",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.3",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.4.2",
-    "strip-loader": "^0.1.2",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.2",
