--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.3",
+    "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.4.2",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
