--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
   },
   "devDependencies": {},
   "peerDependencies": {
-    "react": "15.3.1",
-    "react-dom": "15.3.1"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0"
   },
   "engines": {
     "node": ">=4"
