--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
-    "babel-eslint": "7.2.1",
+    "babel-eslint": "7.2.2",
     "babel-loader": "6.4.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-plugin-dynamic-import-node": "1.0.1",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.3.2",
+    "babel-preset-env": "1.4.0",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.24.1",
     "babel-runtime": "6.23.0",
     "clean-webpack-plugin": "0.1.16",
@@ -41,9 +41,9 @@
     "deepmerge": "1.3.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-import-resolver-webpack": "0.8.1",
     "eslint-loader": "1.7.1",
-    "eslint-plugin-flowtype": "^2.30.4",
+    "eslint-plugin-flowtype": "2.30.4",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
@@ -65,7 +65,7 @@
     "serve-favicon": "2.4.2",
     "style-loader": "0.16.1",
     "url-loader": "0.5.8",
-    "webpack": "2.3.3",
+    "webpack": "2.4.1",
     "webpack-dev-middleware": "1.10.1",
     "webpack-hot-middleware": "2.18.0",
     "webpack-isomorphic-tools": "3.0.2"
