--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "universal",
     "webpack",
     "hot reloading",
-    "react-hot-reloader",
+    "react hot loader",
     "starter",
     "babel"
   ],
