--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "autoprefixer": "6.7.7",
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.2",
@@ -43,9 +44,6 @@
     "eslint-import-resolver-node": "0.3.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-flowtype": "2.30.4",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.3",
     "express": "4.15.2",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
