--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "eslint-import-resolver-node": "0.3.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-flowtype": "2.30.4",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.10.3",
     "express": "4.15.2",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
@@ -67,12 +70,12 @@
     "webpack-hot-middleware": "2.18.0",
     "webpack-isomorphic-tools": "3.0.2"
   },
-  "devDependencies": {},
   "peerDependencies": {
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
   },
   "engines": {
-    "node": ">=4"
+    "npm": ">=3",
+    "node": ">=5"
   }
 }
