--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
     "webpack-hot-middleware": "2.18.0",
     "webpack-isomorphic-tools": "3.0.2"
   },
+  "devDependencies": {
+    "react": "15.5.4",
+    "react-dom": "15.5.4"
+  },
   "peerDependencies": {
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
