--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-kickstarter",
   "version": "0.2.15",
   "main": "src/index.js",
-  "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
+  "description":
+    "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
   "license": "MIT",
   "keywords": [
@@ -24,31 +25,31 @@
     "lint": "./node_modules/.bin/eslint src"
   },
   "dependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "autoprefixer": "7.1.3",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-loader": "7.1.1",
+    "babel-loader": "7.1.2",
     "babel-plugin-dynamic-import-node": "1.0.2",
-    "babel-polyfill": "6.23.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "babel-register": "6.24.1",
-    "babel-runtime": "6.25.0",
+    "babel-register": "6.26.0",
+    "babel-runtime": "6.26.0",
     "clean-webpack-plugin": "0.1.16",
     "compression": "1.7.0",
     "cookie-parser": "1.4.3",
-    "css-loader": "0.28.4",
-    "deepmerge": "1.5.0",
-    "eslint": "4.4.1",
+    "css-loader": "0.28.7",
+    "deepmerge": "1.5.1",
+    "eslint": "4.6.1",
     "eslint-config-airbnb": "15.1.0",
     "eslint-import-resolver-node": "0.3.1",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-flowtype": "2.35.1",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.2.0",
+    "eslint-plugin-react": "7.3.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
@@ -67,7 +68,7 @@
     "serve-favicon": "2.4.3",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
-    "webpack": "3.5.3",
+    "webpack": "3.5.5",
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-isomorphic-tools": "3.0.3"
