--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-kickstarter",
   "version": "0.2.17",
   "main": "src/index.js",
-  "description":
-    "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
+  "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
   "license": "MIT",
   "keywords": [
@@ -31,6 +30,7 @@
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.2",
     "babel-plugin-dynamic-import-node": "1.0.2",
+    "babel-plugin-styled-components": "1.2.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
@@ -42,11 +42,10 @@
     "cookie-parser": "1.4.3",
     "css-loader": "0.28.7",
     "deepmerge": "1.5.1",
-    "eslint": "4.4.1",
+    "eslint": "4.6.1",
     "eslint-config-airbnb": "15.1.0",
     "eslint-import-resolver-node": "0.3.1",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.1",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.3.0",
