--- a/package.json
+++ b/package.json
@@ -25,62 +25,62 @@
     "lint": "./node_modules/.bin/eslint src"
   },
   "dependencies": {
-    "autoprefixer": "7.1.3",
+    "autoprefixer": "7.1.6",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "8.0.1",
     "babel-loader": "7.1.2",
-    "babel-plugin-dynamic-import-node": "1.0.2",
-    "babel-plugin-styled-components": "1.2.0",
+    "babel-plugin-dynamic-import-node": "1.1.0",
+    "babel-plugin-styled-components": "1.2.1",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.26.0",
     "babel-runtime": "6.26.0",
-    "clean-webpack-plugin": "0.1.16",
-    "compression": "1.7.0",
+    "clean-webpack-plugin": "0.1.17",
+    "compression": "1.7.1",
     "cookie-parser": "1.4.3",
     "css-loader": "0.28.7",
-    "deepmerge": "1.5.1",
-    "eslint": "4.6.1",
-    "eslint-config-airbnb": "15.1.0",
+    "deepmerge": "2.0.0",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-node": "0.3.1",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.3.0",
-    "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "express": "4.16.2",
+    "extract-text-webpack-plugin": "3.0.1",
+    "file-loader": "1.1.5",
     "find-cache-dir": "1.0.0",
     "http-proxy": "1.16.2",
     "isomorphic-fetch": "2.2.1",
     "json-loader": "0.5.7",
-    "mobile-detect": "1.3.6",
+    "mobile-detect": "1.3.7",
     "node-sass": "4.5.3",
-    "postcss-loader": "2.0.6",
+    "postcss-loader": "2.0.8",
     "randomstring": "1.1.5",
     "raw-loader": "0.5.1",
-    "react-hot-loader": "3.0.0-beta.7",
+    "react-hot-loader": "3.1.1",
     "sass-loader": "6.0.6",
     "serialize-javascript": "1.4.0",
-    "serve-favicon": "2.4.3",
-    "style-loader": "0.18.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.5",
+    "serve-favicon": "2.4.5",
+    "style-loader": "0.19.0",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
     "webpack-dev-middleware": "1.12.0",
-    "webpack-hot-middleware": "2.18.2",
-    "webpack-isomorphic-tools": "3.0.3"
+    "webpack-hot-middleware": "2.20.0",
+    "webpack-isomorphic-tools": "3.0.5"
   },
   "devDependencies": {
     "react": "15.6.1",
     "react-dom": "15.6.1"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": ">=15",
+    "react-dom": ">=15"
   },
   "engines": {
     "npm": ">=3",
