--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-kickstarter",
   "version": "0.2.23",
   "main": "src/index.js",
-  "description":
-    "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
+  "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
   "license": "MIT",
   "keywords": [
