--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-kickstarter",
   "version": "0.2.24",
   "main": "src/index.js",
-  "description":
-    "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
+  "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
   "license": "MIT",
   "keywords": [
@@ -28,10 +27,10 @@
     "autoprefixer": "7.1.6",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "8.0.1",
+    "babel-eslint": "8.0.2",
     "babel-loader": "7.1.2",
     "babel-plugin-dynamic-import-node": "1.1.0",
-    "babel-plugin-styled-components": "1.2.1",
+    "babel-plugin-styled-components": "1.3.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
@@ -42,7 +41,7 @@
     "compression": "1.7.1",
     "cookie-parser": "1.4.3",
     "css-loader": "0.28.7",
-    "deepmerge": "2.0.0",
+    "deepmerge": "2.0.1",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-node": "0.3.1",
@@ -52,22 +51,23 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "express": "4.16.2",
-    "extract-text-webpack-plugin": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "find-cache-dir": "1.0.0",
     "http-proxy": "1.16.2",
     "isomorphic-fetch": "2.2.1",
     "json-loader": "0.5.7",
     "mobile-detect": "1.3.7",
-    "node-sass": "4.5.3",
+    "node-sass": "4.6.0",
     "postcss-loader": "2.0.8",
     "randomstring": "1.1.5",
     "raw-loader": "0.5.1",
-    "react-hot-loader": "3.1.1",
+    "react-hot-loader": "3.1.2",
     "sass-loader": "6.0.6",
     "serialize-javascript": "1.4.0",
     "serve-favicon": "2.4.5",
     "style-loader": "0.19.0",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-middleware": "1.12.0",
@@ -75,8 +75,8 @@
     "webpack-isomorphic-tools": "3.0.5"
   },
   "devDependencies": {
-    "react": "15.6.1",
-    "react-dom": "15.6.1"
+    "react": "16.1.0",
+    "react-dom": "16.1.0"
   },
   "peerDependencies": {
     "react": ">=15",
