--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-dynamic-import-node": "1.2.0",
     "babel-plugin-styled-components": "1.3.0",
+    "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
