--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-kickstarter",
   "version": "0.3.4",
   "main": "src/index.js",
-  "description":
-    "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
+  "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
   "license": "MIT",
   "keywords": [
@@ -31,6 +30,7 @@
     "babel-eslint": "8.0.2",
     "babel-loader": "7.1.2",
     "babel-plugin-dynamic-import-node": "1.2.0",
+    "babel-plugin-intlized-components": "0.1.0",
     "babel-plugin-styled-components": "1.3.0",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-polyfill": "6.26.0",
