--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-kickstarter",
   "version": "0.3.5",
   "main": "src/index.js",
-  "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
+  "description":
+    "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
   "license": "MIT",
   "keywords": [
@@ -64,7 +65,7 @@
     "postcss-loader": "2.0.9",
     "randomstring": "1.1.5",
     "raw-loader": "0.5.1",
-    "react-hot-loader": "3.1.3",
+    "react-hot-loader": "4.1.3",
     "sass-loader": "6.0.6",
     "serialize-javascript": "1.4.0",
     "serve-favicon": "2.4.5",
