--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-middleware": "1.12.1",
-    "webpack-hot-middleware": "2.20.0",
-    "webpack-isomorphic-tools": "3.0.5"
+    "webpack-hot-middleware": "2.20.0"
   },
   "devDependencies": {
     "react": "16.4.0",
