--- a/package.json
+++ b/package.json
@@ -24,58 +24,57 @@
     "lint": "./node_modules/.bin/eslint src"
   },
   "dependencies": {
-    "autoprefixer": "7.1.6",
+    "autoprefixer": "9.1.3",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.0.2",
-    "babel-loader": "7.1.2",
-    "babel-plugin-dynamic-import-node": "1.2.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-dynamic-import-node": "2.0.0",
     "babel-plugin-intlized-components": "0.1.4",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.26.0",
     "babel-runtime": "6.26.0",
-    "clean-webpack-plugin": "0.1.17",
-    "compression": "1.7.1",
+    "clean-webpack-plugin": "0.1.19",
+    "compression": "1.7.3",
     "cookie-parser": "1.4.3",
-    "css-loader": "0.28.7",
-    "deepmerge": "2.0.1",
+    "css-loader": "1.0.0",
+    "deepmerge": "2.1.1",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-node": "0.3.1",
-    "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
-    "express": "4.16.2",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "find-cache-dir": "1.0.0",
-    "http-proxy": "1.16.2",
+    "express": "4.16.3",
+    "file-loader": "2.0.0",
+    "find-cache-dir": "2.0.0",
+    "http-proxy": "1.17.0",
     "json-loader": "0.5.7",
-    "mobile-detect": "1.3.7",
-    "node-sass": "4.7.2",
-    "postcss-loader": "2.0.9",
+    "mini-css-extract-plugin": "0.4.2",
+    "mobile-detect": "1.4.2",
+    "node-sass": "4.9.3",
+    "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "0.5.1",
-    "react-hot-loader": "4.2.0",
-    "sass-loader": "6.0.6",
-    "serialize-javascript": "1.4.0",
-    "serve-favicon": "2.4.5",
-    "style-loader": "0.19.0",
-    "uglifyjs-webpack-plugin": "1.1.1",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-middleware": "1.12.1",
-    "webpack-hot-middleware": "2.20.0"
+    "react-hot-loader": "4.3.5",
+    "sass-loader": "7.1.0",
+    "serialize-javascript": "1.5.0",
+    "serve-favicon": "2.5.0",
+    "style-loader": "0.23.0",
+    "url-loader": "1.1.1",
+    "webpack": "4.17.1",
+    "webpack-dev-middleware": "3.2.0",
+    "webpack-hot-middleware": "2.22.3",
+    "webpack-manifest-plugin": "2.0.3"
   },
   "devDependencies": {
-    "react": "16.4.0",
-    "react-dom": "16.4.0"
+    "react": "16.4.2",
+    "react-dom": "16.4.2"
   },
   "peerDependencies": {
     "react": ">=15",
