--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
   "bugs": {
     "url": "https://github.com/ProAI/react-kickstarter/issues"
   },
+  "bin": {
+    "eslint": "./src/scripts/eslint.js",
+    "prettier": "./src/scripts/prettier.js"
+  },
   "scripts": {
     "lint": "./node_modules/.bin/eslint src"
   },
   "dependencies": {
-    "autoprefixer": "9.1.3",
+    "autoprefixer": "9.1.5",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
-    "babel-eslint": "9.0.0",
-    "babel-loader": "7.1.4",
-    "babel-plugin-dynamic-import-node": "2.0.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "7.1.5",
+    "babel-plugin-dynamic-import-node": "2.2.0",
     "babel-plugin-intlized-components": "0.1.4",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-polyfill": "6.26.0",
@@ -41,32 +45,34 @@
     "clean-webpack-plugin": "0.1.19",
     "compression": "1.7.3",
     "cookie-parser": "1.4.3",
+    "cross-spawn": "6.0.5",
     "css-loader": "1.0.0",
-    "deepmerge": "2.1.1",
-    "eslint": "4.9.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-import-resolver-node": "0.3.1",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
-    "express": "4.16.3",
+    "deepmerge": "2.2.1",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-import-resolver-node": "0.3.2",
+    "eslint-plugin-flowtype": "2.50.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
+    "express": "4.16.4",
     "file-loader": "2.0.0",
     "find-cache-dir": "2.0.0",
     "http-proxy": "1.17.0",
     "json-loader": "0.5.7",
-    "mini-css-extract-plugin": "0.4.2",
-    "mobile-detect": "1.4.2",
+    "mini-css-extract-plugin": "0.4.4",
+    "mobile-detect": "1.4.3",
     "node-sass": "4.9.3",
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "0.5.1",
-    "react-hot-loader": "4.3.5",
+    "react-hot-loader": "4.3.11",
     "sass-loader": "7.1.0",
     "serialize-javascript": "1.5.0",
     "serve-favicon": "2.5.0",
-    "style-loader": "0.23.0",
-    "url-loader": "1.1.1",
+    "style-loader": "0.23.1",
+    "url-loader": "1.1.2",
     "webpack": "4.17.1",
     "webpack-dev-middleware": "3.2.0",
     "webpack-hot-middleware": "2.22.3",
