--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "webpack": "4.20.2",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3",
-    "webpack-manifest-plugin": "2.0.4"
+    "webpack-manifest-plugin": "2.0.4",
+    "which": "1.3.1"
   },
   "devDependencies": {
     "react": "16.4.2",
