--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "license": "MIT",
   "keywords": [
     "react",
-    "redux",
     "isomorphic",
     "universal",
     "webpack",
     "hot reloading",
     "react hot loader",
     "starter",
-    "babel"
+    "babel",
+    "eslint",
+    "prettier"
   ],
   "repository": "https://github.com/ProAI/react-kickstarter.git",
   "bugs": {
@@ -26,30 +27,33 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src"
   },
+  "files": [
+    "src"
+  ],
   "dependencies": {
-    "autoprefixer": "9.4.7",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "7.4.0",
+    "@babel/preset-env": "7.4.2",
+    "@babel/preset-flow": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.4.0",
+    "autoprefixer": "9.5.0",
     "babel-eslint": "10.0.1",
-    "babel-loader": "7.1.5",
+    "babel-loader": "8.0.5",
     "babel-plugin-dynamic-import-node": "2.2.0",
     "babel-plugin-intlized-components": "0.1.4",
-    "babel-plugin-transform-flow-strip-types": "6.22.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-register": "6.26.0",
-    "babel-runtime": "6.26.0",
-    "clean-webpack-plugin": "1.0.1",
-    "compression": "1.7.3",
+    "clean-webpack-plugin": "2.0.1",
+    "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cross-spawn": "6.0.5",
-    "css-loader": "2.1.0",
+    "css-loader": "2.1.1",
     "deepmerge": "3.2.0",
-    "eslint": "5.14.0",
+    "eslint": "5.15.3",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "4.0.0",
+    "eslint-config-prettier": "4.1.0",
     "eslint-import-resolver-node": "0.3.2",
     "eslint-plugin-flowtype": "3.4.2",
     "eslint-plugin-import": "2.16.0",
@@ -57,7 +61,7 @@
     "eslint-plugin-react": "7.12.4",
     "express": "4.16.4",
     "file-loader": "3.0.1",
-    "find-cache-dir": "2.0.0",
+    "find-cache-dir": "2.1.0",
     "http-proxy": "1.17.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.5.0",
@@ -66,21 +70,21 @@
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "1.0.0",
-    "react-hot-loader": "4.6.5",
+    "react-hot-loader": "4.8.0",
     "sass-loader": "7.1.0",
     "serialize-javascript": "1.6.1",
     "serve-favicon": "2.5.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "4.29.4",
-    "webpack-dev-middleware": "3.5.2",
+    "webpack": "4.29.6",
+    "webpack-dev-middleware": "3.6.1",
     "webpack-hot-middleware": "2.24.3",
     "webpack-manifest-plugin": "2.0.4",
     "which": "1.3.1"
   },
   "devDependencies": {
-    "react": "16.8.2",
-    "react-dom": "16.8.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "prettier": "1.16.4"
   },
   "peerDependencies": {
@@ -88,7 +92,7 @@
     "react-dom": ">=16.4.2"
   },
   "engines": {
-    "npm": ">=3",
-    "node": ">=5"
+    "node": ">= 8",
+    "npm": ">= 5"
   }
 }
