--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-kickstarter",
-  "version": "0.4.6",
+  "version": "0.5.0",
   "main": "src/index.js",
   "description": "Create isomorphic/universal React apps extremely simple with no configuration (until you need it)",
   "author": "Markus Wetzel <markuswetzel@gmx.net>",
@@ -83,9 +83,9 @@
     "which": "1.3.1"
   },
   "devDependencies": {
+    "prettier": "1.16.4",
     "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "prettier": "1.16.4"
+    "react-dom": "16.8.6"
   },
   "peerDependencies": {
     "react": ">=16.4.2",
