--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@babel/core": "7.3.4",
     "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "7.4.0",
     "@babel/preset-env": "7.4.2",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
@@ -70,7 +69,7 @@
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "1.0.0",
-    "react-hot-loader": "4.8.0",
+    "require-control": "2.2.0",
     "sass-loader": "7.1.0",
     "serialize-javascript": "1.6.1",
     "serve-favicon": "2.5.0",
@@ -84,12 +83,13 @@
   },
   "devDependencies": {
     "prettier": "1.16.4",
-    "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react": "16.8.4",
+    "react-dom": "16.8.4"
   },
   "peerDependencies": {
     "react": ">=16.4.2",
-    "react-dom": ">=16.4.2"
+    "react-dom": ">=16.4.2",
+    "react-hot-loader": ">=4.5.0"
   },
   "engines": {
     "node": ">= 8",
