--- a/package.json
+++ b/package.json
@@ -31,25 +31,25 @@
     "src"
   ],
   "dependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.3.4",
-    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.4.2",
+    "@babel/preset-env": "7.5.5",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.4.0",
-    "autoprefixer": "9.5.0",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "babel-plugin-dynamic-import-node": "2.2.0",
+    "@babel/register": "7.5.5",
+    "autoprefixer": "9.6.1",
+    "babel-eslint": "10.0.2",
+    "babel-loader": "8.0.6",
+    "babel-plugin-dynamic-import-node": "2.3.0",
     "babel-plugin-intlized-components": "0.2.1",
-    "clean-webpack-plugin": "2.0.1",
+    "clean-webpack-plugin": "3.0.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cross-spawn": "6.0.5",
     "css-loader": "2.1.1",
-    "deepmerge": "3.2.0",
+    "deepmerge": "4.0.0",
     "eslint": "5.15.3",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
@@ -58,20 +58,20 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "express": "4.16.4",
+    "express": "4.17.1",
     "file-loader": "3.0.1",
-    "find-cache-dir": "2.1.0",
+    "find-cache-dir": "3.0.0",
     "http-proxy": "1.17.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.5.0",
     "mobile-detect": "1.4.3",
-    "node-sass": "4.11.0",
+    "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "1.0.0",
     "require-control": "2.2.0",
     "sass-loader": "7.1.0",
-    "serialize-javascript": "1.6.1",
+    "serialize-javascript": "1.7.0",
     "serve-favicon": "2.5.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
@@ -82,9 +82,9 @@
     "which": "1.3.1"
   },
   "devDependencies": {
-    "prettier": "1.16.4",
-    "react": "16.8.4",
-    "react-dom": "16.8.4"
+    "prettier": "1.18.2",
+    "react": "../../examunity/frontend/node_modules/react",
+    "react-dom": "../../examunity/frontend/node_modules/react-dom"
   },
   "peerDependencies": {
     "react": ">=16.4.2",
