--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-spawn": "6.0.5",
     "css-loader": "3.2.0",
     "deepmerge": "4.0.0",
+    "device-detector-js": "1.1.1",
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.0.0",
@@ -64,7 +65,6 @@
     "http-proxy": "1.17.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.8.0",
-    "mobile-detect": "1.4.3",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
