--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "1.7.0",
     "express": "4.17.1",
     "file-loader": "4.2.0",
     "find-cache-dir": "3.0.0",
