Refactor context object, add isomorphic cookie jar

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-plugin-intlized-components": "0.2.1",
     "clean-webpack-plugin": "3.0.0",
     "compression": "1.7.4",
-    "cookie-parser": "1.4.5",
+    "cookie": "0.4.1",
     "cross-spawn": "7.0.3",
     "css-loader": "3.2.0",
     "deepmerge": "4.2.2",
@@ -74,7 +74,6 @@
     "require-control": "2.2.0",
     "sass-loader": "8.0.0",
     "serialize-javascript": "5.0.1",
-    "serve-favicon": "2.5.0",
     "style-loader": "1.0.0",
     "url-loader": "2.2.0",
     "webpack": "4.41.2",
