Add watching server webpack in development

--- a/package.json
+++ b/package.json
@@ -28,29 +28,29 @@
     "lint": "./node_modules/.bin/eslint src"
   },
   "files": [
-    "src"
+    "src",
+    "babel.js",
+    "babel-expo.js",
+    "eslint.js",
+    "prettier.js"
   ],
   "dependencies": {
-    "@babel/cli": "7.15.7",
-    "@babel/core": "7.15.5",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.15.6",
-    "@babel/preset-flow": "7.14.5",
-    "@babel/preset-react": "7.14.5",
-    "@babel/register": "7.15.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
+    "@babel/core": "7.17.5",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-flow": "7.16.7",
+    "@babel/preset-react": "7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.4",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "babel-plugin-dynamic-import-node": "2.3.3",
-    "babel-plugin-intlized-components": "0.2.1",
-    "browserslist": "4.17.0",
+    "babel-loader": "8.2.3",
+    "babel-plugin-intlized-components": "0.2.4",
+    "babel-plugin-module-resolver": "4.1.0",
+    "browserslist": "4.19.3",
     "clean-webpack-plugin": "4.0.0",
     "compression": "1.7.4",
-    "cookie": "0.4.1",
+    "cookie": "0.4.2",
     "cross-spawn": "7.0.3",
-    "css-loader": "6.2.0",
-    "css-minimizer-webpack-plugin": "3.0.2",
+    "css-loader": "6.6.0",
+    "css-minimizer-webpack-plugin": "3.4.1",
     "deepmerge": "4.2.2",
     "device-detector-js": "2.2.10",
     "eslint": "7.32.0",
@@ -65,9 +65,10 @@
     "express": "4.17.1",
     "find-cache-dir": "3.3.2",
     "http-proxy": "1.18.1",
-    "mini-css-extract-plugin": "2.3.0",
+    "mini-css-extract-plugin": "2.5.3",
+    "module-alias": "2.2.2",
     "node-polyfill-webpack-plugin": "1.1.4",
-    "node-sass": "6.0.1",
+    "node-sass": "7.0.1",
     "postcss": "8.3.6",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "6.1.1",
@@ -75,28 +76,27 @@
     "postcss-preset-env": "6.7.0",
     "process": "0.11.10",
     "randomstring": "1.2.1",
-    "react-app-polyfill": "2.0.0",
-    "require-control": "2.2.0",
-    "sass-loader": "12.1.0",
+    "react-app-polyfill": "3.0.0",
+    "sass-loader": "12.6.0",
     "serialize-javascript": "6.0.0",
-    "style-loader": "3.2.1",
-    "terser-webpack-plugin": "5.2.4",
-    "webpack": "5.53.0",
-    "webpack-dev-middleware": "5.1.0",
+    "style-loader": "3.3.1",
+    "terser-webpack-plugin": "5.3.1",
+    "webpack": "5.69.1",
+    "webpack-dev-middleware": "5.3.1",
     "webpack-hot-middleware": "2.25.1",
-    "webpack-manifest-plugin": "4.0.2",
+    "webpack-manifest-plugin": "4.1.1",
     "which": "2.0.2"
   },
   "devDependencies": {
-    "prettier": "2.4.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-refresh": "0.10.0"
+    "prettier": "2.5.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-refresh": "0.11.0"
   },
   "peerDependencies": {
-    "react": ">=16.13.0",
-    "react-dom": ">=16.13.0",
-    "react-refresh": ">=0.10.0"
+    "react": ">=17",
+    "react-dom": ">=17",
+    "react-refresh": ">=0.11.0"
   },
   "engines": {
     "node": ">= 10.13.0",
