--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
     "prettier.js"
   ],
   "dependencies": {
-    "@babel/core": "7.17.5",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-flow": "7.16.7",
-    "@babel/preset-react": "7.16.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.4",
+    "@babel/core": "7.21.3",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-flow": "7.18.6",
+    "@babel/preset-react": "7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.3",
+    "babel-loader": "9.1.2",
     "babel-plugin-intlized-components": "0.2.4",
-    "babel-plugin-module-resolver": "4.1.0",
-    "browserslist": "4.19.3",
+    "babel-plugin-module-resolver": "5.0.0",
+    "browserslist": "4.21.5",
     "clean-webpack-plugin": "4.0.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.6",
     "cross-spawn": "7.0.3",
-    "deepmerge": "4.2.2",
-    "device-detector-js": "3.0.1",
+    "deepmerge": "4.3.1",
+    "device-detector-js": "3.0.3",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -67,23 +67,23 @@
     "node-polyfill-webpack-plugin": "1.1.4",
     "process": "0.11.10",
     "react-app-polyfill": "3.0.0",
-    "serialize-javascript": "6.0.0",
-    "terser-webpack-plugin": "5.3.1",
-    "webpack": "5.69.1",
-    "webpack-dev-middleware": "5.3.1",
-    "webpack-hot-middleware": "2.25.1",
-    "webpack-manifest-plugin": "4.1.1",
-    "which": "2.0.2"
+    "serialize-javascript": "6.0.1",
+    "terser-webpack-plugin": "5.3.7",
+    "webpack": "^5.64.4",
+    "webpack-dev-middleware": "6.0.2",
+    "webpack-hot-middleware": "2.25.3",
+    "webpack-manifest-plugin": "5.0.0",
+    "which": "3.0.0"
   },
   "devDependencies": {
     "prettier": "2.5.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-refresh": "0.11.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-refresh": "0.14.0"
   },
   "peerDependencies": {
-    "react": ">=17",
-    "react-dom": ">=17",
+    "react": ">=18",
+    "react-dom": ">=18",
     "react-refresh": ">=0.11.0"
   },
   "engines": {
